test/basic/tpush_tpop_verify_tfree_underflow.pto
// RUN: not ptoas --pto-arch=a5 %s 2>&1 | FileCheck %s

module {
  func.func @vector_tfree_underflow(%c2v_consumer_buf: i32) attributes {pto.kernel_kind = #pto.kernel_kind<vector>} {
    %pipe = pto.initialize_l2l_pipe {
      dir_mask = 1,
      slot_size = 1024,
      slot_num = 8,
      flag_base = 0
    }(%c2v_consumer_buf : i32) -> !pto.pipe
    pto.tfree_internal(%pipe : !pto.pipe) {split = 1}
    return
  }
}

// CHECK: error: 'pto.tfree_internal' op requires a prior outstanding tpop on the same pipe
